# miyabi-widgets

./: package.json  pnpm-lock.yaml  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: command.rs  lib.rs  main.rs
src-tauri/src/utils/: app_launcher.rs  config.rs  media.rs  mod.rs  system.rs  widget.rs  widget_handler.rs
src/lib/components/: SongCard.svelte  TitleBar.svelte
src/lib/utils/: interfaces.ts
src/routes/: +layout.svelte  +page.svelte
src/routes/custom/[id]/: +page.svelte
src/routes/media/: +page.svelte  +page.ts
