[package]
name = "miyabi-widgets"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "miyabi_widgets_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["unstable"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
windows = { version = "0.56.0", features = [
  "Media",
  "Media_Control",
  "Media_Playback",
  "Foundation",
  "Storage_Streams",
  "Graphics_Imaging",
] }
image = "0.25.5"
base64 = "0.22.1"
sysinfo = { version = "0.32.0", features = ["serde"] }
machine-info = "1.0.9"
systemstat = "0.2.3"
